rabbitmq/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: NodePort
  ports:
    - port: 5672
      name: rabbitmq
      targetPort: 5672
    - port: 15672
      name: rabbitmq-manage
    - port: 15692
      name: rabbitmq-exporter
  selector:
    app: rabbitmq
